# avalan

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  poetry.toml  pyproject.toml  pytest.ini
.github/workflows/: code-coverage.yml  discord.yml  release.yml  test.yml  update-poetry-lock.yml
artifacts/: ds4_tool_calling_terminal.events.jsonl  ds4_tool_calling_terminal.meta.json  ds4_tool_calling_terminal.raw
docs/: AGENT_GUIDE.md  CLI.md  CONTAINERS.md  DEVELOPMENT.md  DS4.md  FLOWS.md  FLOW_AUTHORING.md  FLOW_COMPATIBILITY.md  FLOW_FIXTURE_INVENTORY.md  INSTALL.md  ISOLATION.md  ISOLATION_TRACEABILITY.md  MEMORIES.md  MEMORY_POSTGRESQL.md  MODALITIES.md  MODELS.md  README.md  RECORDING.md  SHELL_PIPELINE_TRACEABILITY.md  TASKS.md  TASK_OPERATIONS.md  TASK_POSTGRESQL.md  TOOLS.md  ai_uri.md  ds4-tool-streaming.ttyrec  task_file_delivery.md
docs/examples/: README.md  agent_gettext_translator.toml  agent_memory.toml  agent_messi.toml  agent_nagini.toml  agent_sequel.toml  agent_shell.toml  agent_shell_git.toml  agent_shell_pipeline.toml  agent_skills_pdf.toml  agent_sql.toml  agent_support_reply.toml  agent_tool.toml  audio_classification.py  audio_generation.py  audio_speech_recognition.py  audio_text_to_speech.py  autocomplete.py  deploy_agent_tool.toml  openai_client_agent_messi.py  openai_client_agent_tool.py  pypi_avalan_source.md  question_answering.py  seq2seq_summarization.py  seq2seq_translation.py  sequence_classification.py  text_generation.py  text_generation_anthropic.py  text_generation_anthropic_non_stream.py  text_generation_google.py  text_generation_groq.py  text_generation_mlxlm.py  text_generation_ollama.py  text_generation_openai.py  text_generation_openai_non_stream.py  text_generation_vllm.py  token_classification.py  vision_encoder_decoder.py  vision_image_classification.py  vision_image_to_text.py  (+6 more)
docs/tutorials/: getting_started.ipynb
locale/: avalan.pot
scripts/: benchmark_reasoning_summary.py  configure_mlx.sh  input_contract_json.py  reasoning_summary_json.py  run_input_contract_gate.py  task_pgsql_test_database.py  verify_input_acceptance.py  verify_input_types.py  verify_reasoning_summary_acceptance.py  verify_src_coverage.py
specs/: DS4.md  GIT.md  streaming-agents.md
src/avalan/: __init__.py  compat.py  entities.py  filesystem.py  filters.py  observability.py  pgsql.py  sdk.py  server_output_redaction.py  tool_cycles.py  types.py  utils.py
tests/: compat_test.py  conftest.py  filesystem_test.py  init_test.py  input_acceptance_verifier_test.py  input_contract_fixtures.py  input_contract_harness_test.py  input_contract_metadata_test.py  input_contract_test.py  input_type_contract_test.py  observability_key_sample_test.py  partitioner_test.py  pgsql_helpers_test.py  project_metadata_test.py  reasoning_summary_acceptance_test.py  reasoning_summary_fixtures.py  reasoning_summary_phase0_test.py  reasoning_summary_phase1_manifest_test.py  reasoning_summary_phase1_test.py  reasoning_summary_phase2_manifest_test.py  reasoning_summary_phase3_manifest_test.py  reasoning_summary_phase4_manifest_test.py  reasoning_summary_phase5_manifest_test.py  reasoning_summary_phase6_manifest_test.py  reasoning_summary_phase7_manifest_test.py  reasoning_summary_script_loader.py  src_coverage_verifier_test.py  types_test.py  utils_test.py
tests/agent/: additional_coverage_test.py  async_helpers.py  default_orchestrator_test.py  durable_continuation_resume_test.py  durable_runtime_test.py  engine_agent_event_test.py  engine_agent_test.py  execution_attached_boundaries_test.py  execution_cancellation_integration_test.py  execution_coverage_regression_test.py  execution_direct_iteration_cancellation_test.py  execution_isolation_integration_test.py  execution_memory_idempotency_test.py  execution_message_exactness_test.py  execution_response_ownership_adversarial_test.py  execution_sequential_response_sync_test.py  execution_strict_invariants_test.py  execution_suspension_adversarial_test.py  execution_test.py  execution_transcript_adversarial_test.py  execution_wrapper_input_required_test.py  interaction_runtime_injection_test.py  json_orchestrator_test.py  loader_dependency_test.py  loader_protocols_test.py  loader_test.py  observable_response_test.py  orchestrator_cleanup_gap_coverage_test.py  orchestrator_cleanup_ownership_test.py  orchestrator_contract_coverage_test.py  orchestrator_convergence_coverage_test.py  orchestrator_execution_response_test.py  orchestrator_loader_coverage_test.py  orchestrator_renderer_property_test.py  orchestrator_response_additional_test.py  orchestrator_response_binary_test.py  orchestrator_response_capability_test.py  orchestrator_response_cleanup_coverage_test.py  orchestrator_response_contract_coverage_test.py  orchestrator_response_convergence_coverage_test.py  (+18 more)
tests/cli/: agent_interaction_test.py  agent_options_test.py  agent_reasoning_tag_test.py  agent_run_math_tool_test.py  agent_test.py  async_helpers.py  attention_default_test.py  cache_test.py  default_attention_test.py  deploy_test.py  display_reducer_test.py  display_safety_test.py  display_snapshot_test.py  display_test.py  download_test.py  extract_chat_template_settings_test.py  flow_command_test.py  get_model_settings_test.py  get_orchestrator_settings_test.py  get_tool_settings_test.py  input_test.py  interaction_channel_test.py  interaction_cli_pty_e2e_test.py  interaction_renderer_test.py  main_cuda_transformers_utils_test.py  main_test.py  memory_test.py  model_reasoning_tag_test.py  model_search_additional_test.py  model_test.py  needs_hf_token_test.py  plain_install_import_test.py  reasoning_summary_e2e_test.py  skills_settings_test.py  stream_coordinator_test.py  stream_import_boundary_test.py  stream_presenter_test.py  task_cli_input_test.py  task_test.py  theme_basic_test.py  (+7 more)
tests/container/: apple_test.py  audit_test.py  backend_test.py  conformance_test.py  docker_test.py  fail_closed_conformance_test.py  integration_test.py  isolation_phase0_inventory_test.py  lifecycle_test.py  output_test.py  (+10 more)
(+1098 files in other folders)
