[build-system]
requires = ["poetry-core>=2.1.3", "poetry-dynamic-versioning>=1.9.1"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "avalan"
dynamic = ["version"]
description = "Multi-backend, multi-modal micro-framework for AI agent development, orchestration, and deployment"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "The Avalan Team", email = "avalan@avalan.ai" },
]
# the upper 3.13 python version limit is because of vllm
# @see https://github.com/vllm-project/vllm/issues/12083
requires-python = ">=3.11,<3.13"
dependencies = [
  "packaging>=25.0,<26.0",
  "humanize>=4.12.3,<5.0.0",
  "huggingface-hub>=0.34.3,<1.0.0",
  "rich>=14.1.0,<15.0.0",
  # version limited because of vllm
  "torch>=2.7.1,<2.8.0",
  "transformers>=4.55.0,<5.0.0",
  "pandas>=2.3.1,<3.0.0",
  "accelerate>=1.9.0,<2.0.0",
  "sentence-transformers>=5.1.0,<6.0.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://avalan.ai"
repository = "https://github.com/avalan-ai/avalan"
documentation = "https://github.com/avalan-ai/avalan#readme"
"Bug Tracker" = "https://github.com/avalan-ai/avalan/issues"

[project.scripts]
avl = "avalan.cli.__main__:main"
avalan = "avalan.cli.__main__:main"

[project.optional-dependencies]
agent = [
  "jinja2>=3.1.6,<4.0.0",
]
audio = [
  "soundfile>=0.13.1,<0.14.0",
  # version limited because of vllm
  "torchaudio>=2.7.1,<2.8.0",
]
memory = [
  "beautifulsoup4>=4.14.2,<5.0.0",
  "boto3>=1.40.3,<2.0.0",
  "faiss-cpu>=1.11.0.post1,<2.0.0",
  "markitdown[pdf]>=0.1.2,<0.2.0",
  "markdownify>=1.1.0,<2.0.0",
  "psycopg[binary,pool]>=3.2.9,<4.0.0",
  "pgvector>=0.4.1,<0.5.0",
  "pypdf>=6.1.1,<7.0.0",
  "tree-sitter>=0.25.1,<0.26.0",
  "tree-sitter-python>=0.23.6,<0.24.0",
  "elasticsearch>=9.1.0,<10.0.0",
]
quantization = [
  "bitsandbytes>=0.46.1,<0.47.0 ; platform_system == 'Linux'",
]
server = [
  "a2a-sdk>=0.3.6,<0.4.0",
  "fastapi>=0.116.1,<0.117.0",
  "mcp>=1.12.3,<2.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "uvicorn>=0.35.0,<0.36.0",
]
tool = [
  "aiomysql>=0.2.0,<0.3.0",
  "asyncpg>=0.30.0,<0.31.0",
  "playwright>=1.54.0,<2.0.0",
  "RestrictedPython>=8.0,<9.0.0",
  "SQLAlchemy>=2.0.43,<3.0.0",
  "sqlglot>=27.20.0,<28.0.0",
  "sympy>=1.14.0,<2.0.0",
  "youtube-transcript-api>=1.2.2,<2.0.0",
]
secrets = [
  "boto3>=1.40.3,<2.0.0",
  "keyring>=25.6.0,<26.0.0",
]
translation = [
  "protobuf>=6.31.1,<7.0.0",
  "sentencepiece>=0.2.0,<0.3.0",
  "tiktoken>=0.10.0,<0.11.0",
]
vendors = [
  "anthropic>=0.61.0,<0.62.0",
  "google-genai>=1.28.0,<2.0.0",
  # version limited because of vllm
  "openai>=1.90.0,<1.91.0",
  "litellm>=1.75.0,<2.0.0",
  "pillow>=11.3.0,<12.0.0",
  "tiktoken>=0.10.0,<0.11.0",
]
vision = [
  "diffusers>=0.34.0,<0.35.0",
  "imageio>=2.37.0,<3.0.0",
  "imageio-ffmpeg>=0.6.0,<0.7.0",
  "opencv-python>=4.12.0.88,<5.0.0",
  "pillow>=11.3.0,<12.0.0",
  "torchvision>=0.22.1,<0.23.0",
]
vllm = [
  "vllm>=0.10.0,<0.11.0 ; platform_system == 'Linux'",
]
mlx = [
  "mlx>=0.28.0,<0.29.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.26.3,<0.27.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
apple = [
  "mlx>=0.28.0,<0.29.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.26.3,<0.27.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
nvidia = [
  "vllm>=0.10.0,<0.11.0 ; platform_system == 'Linux'",
  "bitsandbytes>=0.46.1,<0.47.0 ; platform_system == 'Linux'",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length   = 79  # PEP 8
indent-width  = 4
src           = ["src"]
fix           = true
target-version = "py311" # PEP 585, 604, 634–636
preview        = true

[tool.ruff.format]
indent-style               = "space"
line-ending                = "auto"
quote-style                = "double"
docstring-code-format      = true
skip-magic-trailing-comma  = false

[tool.ruff.lint]
select = [
  "E",       # PEP 8 errors
  "W",       # PEP 8 warnings
  "F",       # Flake8 (pyflakes) errors
  "D",       # pydocstyle (PEP 257) docstring checks
  "I",       # isort import sorting
  "UP006",   # non-PEP585 — migrate typing.List → list etc.
  "UP007",   # non-PEP604-union — migrate Union[X, Y] → X | Y
  "UP045",   # non-PEP604-optional — migrate Optional[X] → X | None
]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "D400",  # First line should end with a period
]

[tool.ruff.lint.isort]
section-order = ["local-folder", "future", "standard-library", "third-party", "first-party"]
known-first-party = ["avalan"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.poetry]
version = "1.3.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.1,<9.0.0"
pytest-cov = ">=6.2.1,<7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
black = "^25.1.0"
mypy = "^1.20.0"
pydantic = "^2.12.5"

[tool.poetry-dynamic-versioning]
enable = true

[tool.mypy]
files = ["src/avalan"]
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
  "avalan.model.*",
  "avalan.tool.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "a2a",
  "aioboto3",
  "anyio",
  "boto3",
  "boto3.*",
  "botocore",
  "botocore.*",
  "bs4",
  "entmax",
  "faiss",
  "fastapi",
  "fastapi.*",
  "huggingface_hub",
  "huggingface_hub.*",
  "httpx",
  "jinja2",
  "keyring",
  "keyring.*",
  "markitdown",
  "numpy",
  "pgvector.*",
  "psutil",
  "pypdf",
  "rich",
  "rich.*",
  "tokenizers",
  "tiktoken",
  "tiktoken.*",
  "torchaudio",
  "torchaudio.*",
  "torch",
  "torch.*",
  "tqdm",
  "tqdm.*",
  "transformers",
  "transformers.*",
  "uvicorn",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tiktoken", "tiktoken.*"]
follow_imports = "skip"
