[build-system]
requires = ["poetry-core>=2.1.3", "poetry-dynamic-versioning>=1.9.1"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "avalan"
dynamic = ["version"]
description = "Multi-backend, multi-modal micro-framework for AI agent development, orchestration, and deployment"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "The Avalan Team", email = "avalan@avalan.ai" },
]
requires-python = ">=3.11,<3.15"
dependencies = [
  "packaging>=24.0,<27.0",
  "humanize>=4.12.3,<5.0.0",
  "rich>=13.7.0,<16.0.0",
  "tiktoken>=0.6.0,<1.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://avalan.ai"
repository = "https://github.com/avalan-ai/avalan"
documentation = "https://github.com/avalan-ai/avalan#readme"
"Bug Tracker" = "https://github.com/avalan-ai/avalan/issues"

[project.scripts]
avl = "avalan.cli.__main__:main"
avalan = "avalan.cli.__main__:main"

[project.optional-dependencies]
local = [
  "huggingface-hub>=1.0.0,<2.0.0",
  "hf-xet>=1.4.3,<2.0.0 ; platform_machine == 'x86_64' or platform_machine == 'amd64' or platform_machine == 'AMD64' or platform_machine == 'arm64' or platform_machine == 'aarch64'",
  "torch>=2.11.0,<2.12.0",
  "transformers>=5.5.4,<6.0.0",
  "accelerate>=1.9.0,<2.0.0",
  "sentence-transformers>=5.4.1,<6.0.0",
]

agent = [
  "jinja2>=3.1.6,<4.0.0",
]
audio = [
  "soundfile>=0.13.1,<0.14.0",
  "torchaudio>=2.11.0,<2.12.0",
]
memory = [
  "beautifulsoup4>=4.14.2,<5.0.0",
  "boto3>=1.40.3,<2.0.0",
  "faiss-cpu>=1.14.2,<2.0.0",
  "markitdown[pdf]>=0.1.2,<0.2.0 ; python_version < '3.14'",
  "markdownify>=1.1.0,<2.0.0",
  "psycopg[pool]>=3.2.9,<4.0.0",
  "psycopg-binary>=3.2.9,<4.0.0 ; python_version < '3.14'",
  "pgvector>=0.4.1,<0.5.0",
  "pypdf>=6.10.2,<7.0.0",
  "tree-sitter>=0.25.1,<0.26.0",
  "tree-sitter-python>=0.23.6,<0.24.0",
  "elasticsearch>=9.1.0,<10.0.0",
]
quantization = [
  "bitsandbytes>=0.46.1,<0.47.0 ; platform_system == 'Linux'",
]
server = [
  "fastapi>=0.101.0,<1.0.0",
  "mcp>=1.23.0,<2.0.0",
  "pydantic>=2.0,<3.0.0",
  "uvicorn>=0.27.0,<1.0.0",
]

tool = [
  "aiomysql>=0.3.0,<0.4.0",
  "asyncpg>=0.29.0,<0.32.0",
  "matplotlib>=3.6.0,<4.0.0",
  "SQLAlchemy>=2.0.43,<3.0.0",
  "sqlglot>=22.0,<31.0.0",
  "sympy>=1.12,<2.0.0",
]
code = [
  "RestrictedPython>=8.0,<9.0.0",
]
browser = [
  "playwright>=1.54.0,<2.0.0",
]
youtube = [
  "youtube-transcript-api>=1.2.2,<2.0.0",
]
secrets = [
  "boto3>=1.40.3,<2.0.0",
  "keyring>=25.6.0,<26.0.0",
]
translation = [
  "protobuf>=6.31.1,<7.0.0",
  "sentencepiece>=0.2.0,<0.3.0",
]
a2a = [
  "a2a-sdk>=0.3.6,<0.4.0",
]

litellm = [
  "litellm>=1.83.7,<2.0.0 ; python_version < '3.14'",
]

vendors = [
  "aioboto3>=15.0.0,<16.0.0",
  "anthropic>=0.71.0,<0.72.0",
  "diffusers>=0.38.0,<0.39.0",
  "google-genai>=1.28.0,<2.0.0",
  "openai>=2.0.0,<3.0.0",
  "pillow>=12.2.0,<13.0",
  "safetensors>=0.8.0rc0,<0.9.0",
]
vision = [
  "diffusers>=0.38.0,<0.39.0",
  "imageio>=2.37.0,<3.0.0",
  "imageio-ffmpeg>=0.6.0,<0.7.0",
  "opencv-python>=4.12.0.88,<5.0.0",
  "pillow>=12.2.0,<13.0",
  "safetensors>=0.8.0rc0,<0.9.0",
  "torchvision>=0.26.0,<0.27.0 ; python_full_version != '3.14.1'",
]
vllm = [
  "vllm>=0.21.0,<0.22.0 ; platform_system == 'Linux' and python_version < '3.14'",
]
mlx = [
  "mlx>=0.31.2,<0.32.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.31.3,<0.32.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
apple = [
  "mlx>=0.31.2,<0.32.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.31.3,<0.32.0 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
ds4 = [
  "pyds4>=1.0.2,<2.0.0 ; platform_system == 'Linux' or (platform_system == 'Darwin' and platform_machine == 'arm64')",
]
nvidia = [
  "vllm>=0.21.0,<0.22.0 ; platform_system == 'Linux' and python_version < '3.14'",
  "bitsandbytes>=0.46.1,<0.47.0 ; platform_system == 'Linux'",
]

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length   = 79  # PEP 8
indent-width  = 4
src           = ["src"]
fix           = true
target-version = "py311" # PEP 585, 604, 634–636
preview        = true

[tool.ruff.format]
indent-style               = "space"
line-ending                = "auto"
quote-style                = "double"
docstring-code-format      = true
skip-magic-trailing-comma  = false

[tool.ruff.lint]
select = [
  "E",       # PEP 8 errors
  "W",       # PEP 8 warnings
  "F",       # Flake8 (pyflakes) errors
  "D",       # pydocstyle (PEP 257) docstring checks
  "I",       # isort import sorting
  "UP006",   # non-PEP585 — migrate typing.List → list etc.
  "UP007",   # non-PEP604-union — migrate Union[X, Y] → X | Y
  "UP045",   # non-PEP604-optional — migrate Optional[X] → X | None
]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "D400",  # First line should end with a period
]

[tool.ruff.lint.isort]
section-order = ["local-folder", "future", "standard-library", "third-party", "first-party"]
known-first-party = ["avalan"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.poetry]
version = "1.4.11"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
matplotlib = ">=3.8.0,<4.0.0"
pyds4 = {version = ">=1.0.2,<2.0.0", markers = "platform_system == 'Linux' or (platform_system == 'Darwin' and platform_machine == 'arm64')"}
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.2.1,<7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.13"
black = "^26.3.1"
mypy = "^2.1.0"
pydantic = "^2.12.5"

[tool.poetry-dynamic-versioning]
enable = true

[tool.mypy]
files = ["src/avalan"]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
show_error_code_links = true
pretty = true
exclude_gitignore = true
local_partial_types = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disable_error_code = ["override"]
enable_error_code = ["ignore-without-code"]

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
  "a2a",
  "aioboto3",
  "anyio",
  "boto3",
  "boto3.*",
  "botocore",
  "botocore.*",
  "bs4",
  "entmax",
  "faiss",
  "fastapi",
  "fastapi.*",
  "huggingface_hub",
  "huggingface_hub.*",
  "httpx",
  "jinja2",
  "keyring",
  "keyring.*",
  "markitdown",
  "numpy",
  "ollama",
  "pgvector.*",
  "psutil",
  "pypdf",
  "RestrictedPython",
  "rich",
  "rich.*",
  "sympy",
  "sympy.*",
  "tokenizers",
  "tiktoken",
  "tiktoken.*",
  "torchaudio",
  "torchaudio.*",
  "torch",
  "torch.*",
  "tqdm",
  "tqdm.*",
  "transformers",
  "transformers.*",
  "uvicorn",
  "vllm",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tiktoken", "tiktoken.*"]
follow_imports = "skip"
